--- a/glass/index.html
+++ b/glass/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Template</title>
+    <title>Glass | Zach Nguyen</title>
     <style>
       * {
         margin: 0px;
