--- a/glass/index.html
+++ b/glass/index.html
@@ -19,11 +19,37 @@
         width: 100%;
         height: 100%;
       }
+
+      .caption {
+        font-family:
+          system-ui,
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
+          Roboto,
+          Oxygen,
+          Ubuntu,
+          Cantarell,
+          "Open Sans",
+          "Helvetica Neue",
+          sans-serif;
+        position: absolute;
+        bottom: 16px;
+        left: 16px;
+      }
     </style>
   </head>
   <body>
     <canvas></canvas>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/stats.js@master/build/stats.js"></script>
     <script src="./main.js"></script>
+    <div class="caption">
+      <a
+        href="https://unsplash.com/photos/a-collage-of-pictures-and-words-on-a-white-wall-t-WkBEOQngs"
+        target="_blank"
+        >Image</a
+      >
+      by <a href="https://unsplash.com/@andyvult" target="_blank">Andy Vult</a>.
+    </div>
   </body>
 </html>
